--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -651,7 +651,13 @@ a {
                     width: 100%;
                     border-radius: 4px;
                     box-shadow: 0 0 50px 0 rgba(black, .5);
-                    padding-bottom: 10px;
+                    margin-bottom: 10px;
+                    transition: 0.2s all;
+                    &:hover,
+                    &:focus {
+                        box-shadow: 0 0 50px rgba(white, .15);
+                        transition: 0.2s all;
+                    }
                 }
                 
                 .title {
