Add Terms & Conditions and Privacy Policy pages

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,8 @@ $facebook: #4862a3;
 $instagram: #fff;
 $youtube: #cc181e;
 
+@import 'player';
+
 
 body {
     background: #19192d url("../img/background.jpg") no-repeat center center fixed;
@@ -739,6 +741,34 @@ a {
             background-color: rgba($red, .1);
             border-color: $red;
             color: $red;
+        }
+    }
+}
+
+/* Policy & Terms */
+.entry {
+    margin-bottom: 50px;
+    .header {
+        background-color: rgba(black, .5);
+        padding-top: 25px;
+        padding-bottom: 35px;
+        
+        h2 {
+            color: white;
+        }
+    }
+    
+    .note {
+        margin-top: 15px;
+        padding-top: 25px;
+        border-top: 1px solid rgba(white, .1);
+        font-style: italic;
+        font-size: 12px;
+    }
+    
+    .content {
+        h3 {
+            margin-top: 50px;
         }
     }
 }
